# codopsy

./: .codopsyrc.json  .gitignore  Cargo.toml  README.md
src/: analyze.rs  baseline.rs  config.rs  hotspot.rs  lib.rs  main.rs  scorer.rs  types.rs
src/analyzer/: ast_utils.rs  complexity.rs  linter.rs  mod.rs  node_classify.rs
src/analyzer/rules/: bug_detection.rs  control_flow.rs  mod.rs  rust_rules.rs  style_rules.rs  threshold_rules.rs
src/commands/: init.rs  mod.rs  print.rs
src/reporter/: json.rs  mod.rs
src/utils/: file.rs  git.rs
