[package]
name = "codopsy"
version = "0.1.0"
edition = "2021"
description = "AST-level code quality analyzer for TypeScript, JavaScript & Rust"

[[bin]]
name = "codopsy"
path = "src/main.rs"

[lib]
name = "codopsy"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rayon = "1"
