[package]
name = "codopsy"
version = "0.1.0"
edition = "2021"
description = "AST-level code quality analyzer for multiple languages"

[[bin]]
name = "codopsy"
path = "src/main.rs"

[lib]
name = "codopsy"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-haskell = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-ocaml = "0.24"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rayon = "1"
